--- a/calc2.html
+++ b/calc2.html
@@ -213,11 +213,19 @@
                 <td>敌人1</td>
                 <td>
                     <select id="ddlEnemyClass1">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
+                        <option value="1-1">Saber</option>
+                        <option value="1-2">Archer</option>
+                        <option value="1-3">Lancer</option>
                         <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
+                        <option value="1.2-1">Caster</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="1-4">Ruler</option>
+                        <option value="1-5">Avenger</option>
+                        <option value="1-6">Shielder</option>
+                        <option value="1.2-2">MoonCancer</option>
+                        <option value="1-7">Alterego</option>
+                        <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying1">
                         <input type="checkbox" id="ckIsUndying1" value="1" /> 死灵
@@ -226,11 +234,19 @@
                 <td>敌人2</td>
                 <td>
                     <select id="ddlEnemyClass2">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
+                        <option value="1-1">Saber</option>
+                        <option value="1-2">Archer</option>
+                        <option value="1-3">Lancer</option>
                         <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
+                        <option value="1.2-1">Caster</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="1-4">Ruler</option>
+                        <option value="1-5">Avenger</option>
+                        <option value="1-6">Shielder</option>
+                        <option value="1.2-2">MoonCancer</option>
+                        <option value="1-7">Alterego</option>
+                        <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying2">
                         <input type="checkbox" id="ckIsUndying2" value="1" /> 死灵
@@ -239,11 +255,19 @@
                 <td>敌人3</td>
                 <td>
                     <select id="ddlEnemyClass3">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
+                        <option value="1-1">Saber</option>
+                        <option value="1-2">Archer</option>
+                        <option value="1-3">Lancer</option>
                         <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
+                        <option value="1.2-1">Caster</option>
+                        <option value="0.9">Assassin</option>
+                        <option value="0.8">Berserker</option>
+                        <option value="1-4">Ruler</option>
+                        <option value="1-5">Avenger</option>
+                        <option value="1-6">Shielder</option>
+                        <option value="1.2-2">MoonCancer</option>
+                        <option value="1-7">Alterego</option>
+                        <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying3">
                         <input type="checkbox" id="ckIsUndying3" value="1" /> 死灵
@@ -271,36 +295,48 @@
                 </td>
                 <td>敌人1阵营</td>
                 <td>
-                    <select id="ddlAttribute1">
-                        <option value="1.0">非克制</option>
-                        <option value="1.1">克制</option>
-                        <option value="0.9">被克制</option>
+                    <select id="ddlEnemyAttribute1">
+                        <option value="0">默认</option>
+                        <option value="1">天</option>
+                        <option value="2">地</option>
+                        <option value="3">人</option>
+                        <option value="4">星</option>
+                        <option value="5">兽</option>
                     </select>
                     <label for="ckIsSpecialAttack1">
                         <input type="checkbox" id="ckIsSpecialAttack1" value="1" /> 特攻
                     </label>
+                    <input type="button" value="应用" id="btnApplyEnemy1" onclick="apply('1')"/>
                 </td>
                 <td>敌人2阵营</td>
                 <td>
-                    <select id="ddlAttribute2">
-                        <option value="1.0">非克制</option>
-                        <option value="1.1">克制</option>
-                        <option value="0.9">被克制</option>
+                    <select id="ddlEnemyAttribute2">
+                        <option value="0">默认</option>
+                        <option value="1">天</option>
+                        <option value="2">地</option>
+                        <option value="3">人</option>
+                        <option value="4">星</option>
+                        <option value="5">兽</option>
                     </select>
                     <label for="ckIsSpecialAttack2">
                         <input type="checkbox" id="ckIsSpecialAttack2" value="1" /> 特攻
                     </label>
+                    <input type="button" value="应用" id="btnApplyEnemy2" onclick="apply('2')"/>
                 </td>
                 <td>敌人3阵营</td>
                 <td>
-                    <select id="ddlAttribute3">
-                        <option value="1.0">非克制</option>
-                        <option value="1.1">克制</option>
-                        <option value="0.9">被克制</option>
+                    <select id="ddlEnemyAttribute3">
+                        <option value="0">默认</option>
+                        <option value="1">天</option>
+                        <option value="2">地</option>
+                        <option value="3">人</option>
+                        <option value="4">星</option>
+                        <option value="5">兽</option>
                     </select>
                     <label for="ckIsSpecialAttack3">
                         <input type="checkbox" id="ckIsSpecialAttack3" value="1" /> 特攻
                     </label>
+                    <input type="button" value="应用" id="btnApplyEnemy3" onclick="apply('3')"/>
                 </td>
             </tr>
             <tr>
@@ -308,20 +344,42 @@
                 <td>
                     <input type="text" id="txtAttackBuff" value="0" />
                 </td>
-                <td>敌方防御力Buff(%)</td>
+                <td>敌人1防御Buff(%)</td>
                 <td>
-                    <input type="text" id="txtEnemyDefence" value="0" basevalue="0"/>
+                    <input type="text" id="txtEnemyDefence1" value="0" basevalue="0"/>
                 </td>
+                <td>敌人2防御Buff(%)</td>
+                <td>
+                    <input type="text" id="txtEnemyDefence2" value="0" basevalue="0"/>
+                </td>
+                <td>敌人3防御Buff(%)</td>
+                <td>
+                    <input type="text" id="txtEnemyDefence3" value="0" basevalue="0"/>
+                </td>
+	    </tr>
+	    <tr>
                 <td>卡牌Buff(%)</td>
                 <td>
                     <input type="text" id="txtCardBuff" value="0" basevalue="0"/>
                 </td>
+                <td>敌人1卡牌耐性(%)</td>
+                <td>
+                    <input type="text" id="txtCardResist1" value="0" />
+                </td>
+                <td>敌人2卡牌耐性(%)</td>
+                <td>
+                    <input type="text" id="txtCardResist2" value="0" />
+                </td>
+                <td>敌人3卡牌耐性(%)</td>
+                <td>
+                    <input type="text" id="txtCardResist3" value="0" />
+                </td>
+            </tr>
+            <tr>
                 <td>宝具威力Buff(%)</td>
                 <td>
                     <input type="text" id="txtNpStrength" value="0" basevalue="0"/>
                 </td>
-            </tr>
-            <tr>
                 <td>特攻威力Buff(%)</td>
                 <td>
                     <input type="text" id="txtSpecialAttack" value="0" />
@@ -334,12 +392,12 @@
                 <td>
                     <input type="text" id="txtDamagePlus" value="0" basevalue="0" />
                 </td>
+            </tr>
+            <tr>
                 <td>黄金律(%)</td>
                 <td>
                     <input type="text" id="txtNpGainBuff" value="0" />
                 </td>
-            </tr>
-            <tr>
                 <td>敌人1鞭尸</td>
                 <td>
                     <input type="text" id="txtOverkill1" value="0" />
@@ -380,14 +438,14 @@
                 <th>宝具等级(oc)</th>
                 <th>宝具倍率</th>
                 <th>攻击力Buff</th>
-                <th>敌方防御力Buff</th>
                 <th>卡牌Buff</th>
                 <th>宝具威力Buff</th>
-                <th>特攻威力Buff</th>
                 <th>宝具特攻</th>
 		<th>黄金律</th>
                 <th>伤害最小值</th>
                 <th>伤害平均值</th>
+                <th>伤害最小值</th>
+                <th>伤害最小值</th>
 		<th>NP获取</th>
                 <th>&nbsp;</th>
             </tr>
@@ -399,7 +457,7 @@
 <script src="js/data.js"></script>
 <script src="js/common.js"></script>
 <script src="js/base2.js"></script>
-<script src="js/functions.js"></script>
+<script src="js/functions2.js"></script>
 <script type="text/javascript">
     "use strict";
     /***********************************************************/
@@ -538,7 +596,7 @@
         }
     }
     $("btnAddSkadi").onclick = function(){
-        $("txtEnemyDefence").value = getFloat("txtEnemyDefence") - 30;
+        $("txtEnemyDefence1").value = getFloat("txtEnemyDefence1") - 30;
         if($("ddlColor").value == 0.8){
             $("txtCardBuff").value = getFloat("txtCardBuff") + 50;
         }
@@ -633,7 +691,7 @@
         //11.攻击力Buff(%)
         let attackBuff = getFloat("txtAttackBuff");
         //12.敌方防御力Buff(%)
-        let enemyDefence = getFloat("txtEnemyDefence");
+        let enemyDefence = getFloat("txtEnemyDefence1");
 	enemyDefence = Math.max(-100, enemyDefence);
         //13.特攻威力Buff(%)与宝具特攻(%)
         let specialAttackBuff = 0;
