--- a/calc.html
+++ b/calc.html
@@ -268,15 +268,15 @@
                 <td>御主礼装</td>
                 <td>
                     <select id="ddlMysticCode">
-                        <option value="">无</option>
-                        <option value="0-1">战斗服</option>
+                        <option value="0-1">无</option>
+                        <option value="0-2">战斗服</option>
                         <option value="50-1">04服</option>
-                        <option value="0-2">骑士王服</option>
-                        <option value="0-3">初始服</option>
-                        <option value="0-4">西服</option>
-                        <option value="0-5">泳装</option>
-                        <option value="0-6">月海</option>
-                        <option value="0-7">月背</option>
+                        <option value="0-3">骑士王服</option>
+                        <option value="0-4">初始服</option>
+                        <option value="0-5">西服</option>
+                        <option value="0-6">泳装</option>
+                        <option value="0-7">月海</option>
+                        <option value="0-8">月背</option>
                         <option value="10">极地服</option>
                         <option value="20">夏威夷衫</option>
                         <option value="35">新年服</option>
